# game_theory_of_pollution_asean

./: .gitignore  README.md  pyproject.toml
data/raster/: resampled_count_15_min.tiff
data/raster_wind_850mb/: u-1.tiff  u-10.tiff  u-11.tiff  u-12.tiff  u-2.tiff  u-3.tiff  u-4.tiff  u-5.tiff  u-6.tiff  u-7.tiff  u-8.tiff  u-9.tiff  v-1.tiff  v-10.tiff  v-11.tiff  v-12.tiff  v-2.tiff  v-3.tiff  v-4.tiff  v-5.tiff  v-6.tiff  v-7.tiff  v-8.tiff  v-9.tiff
data/vector/: countries.dbf  countries.shp  countries.shx
output/: psi_list.npy  psi_list.txt  wind_vector_per_month_list.npy
src/: 03_make_countries_network.py  04_wind_speed_data_analysis.py
src/main/: 01_filter_countries_polygon.py  02_make_countries_network.py  02_resample_population_raster.py  03_make_countries_network.py
src/modules/: countries_network.py  pollution_game.py
src/tests/: diff_game_ten_players.py  diff_game_ten_players_coop.py  static_game_two_players.py
